# django-snacks

./: db.sqlite3  pyproject.toml  readme.md
snacks/: tests.py  urls.py  views.py
snacks_project/: settings.py  urls.py
tempalte/: about.html  base.html  home.html
